# datamint

./: README.md  datamint-eval.opam  datamint-examples.opam  datamint-kafka.opam  datamint-kyoto.opam  datamint.opam  dune  dune-project
eval/data-module/: blog_author_posts.ml  blog_query.ml  blog_query_bis.ml  blog_schema.ml  blog_storage.ml  capability.ml  dataset.ml  dataset_refimpl.ml  dune  jbuild  query.ml  query_refimpl.ml  schema.ml  schema_refimpl.ml  util.ml
examples/continuous_queries/: dune  jbuild  run_continuously.ml
examples/passover/: README.md  TODO.md  consumer.conf  create_topics.sh  dune  event_generator.ml  gen-messages.sh  jbuild  launch_processes.sh  message.ml  message.mli  messages.jsonline  passover.ml  rooms.html  ws_event_producer.html
lib/: DataMint.ml  dune  jbuild
lib/generics/: dune  equal.ml  equal.mli  interpretation.ml  json_support.ml  marshal_support.ml  repr.ml  repr.mli  serialization.ml  store.ml
lib/interpreter/: bool_support.ml  collection_support.ml  compiler.ml  compiler.mli  core_functional_language.ml  datatype.ml  deBruijn.ml  deBruijn.mli  dict.ml  dune  expr.ml  expr.mli  generics.ml  generics.mli  integer_support.ml  jbuild  json_support.ml  lambda_term_repl.ml  lambda_term_repl.mli  lexer.mll  marshal_support.ml  parser.mly  parsing_helper.ml  semantics.ml  semantics_witness.ml  serialization.ml  string_support.ml  type.ml  type.mli  type_witness.ml  type_witness.mli  unification.ml  unification.mli
lib/kafka/: dune  jbuild  sink.ml  sink.mli  source.ml  source.mli
lib/kyoto/: KVStore.ml  KVStore.mli  dune  jbuild
lib/mapping/: dune  reducer.ml
lib/reducers/: action.ml  action.mli  dune  group.ml  monoid.ml  series.ml  series.mli
lib/relation/: bounded_interpretation.ml  capability.ml  capability.mli  dune  interpretation.ml  jbuild  multiplicity.ml  multiplicity.mli  multiplicity_interpretation.ml  multiplicity_interpretation.mli  query.ml  query_implementation.ml  range.ml  range.mli
lib/series/: IO.ml  RE.ml  bounded.ml  dune  incremental_value.ml  incremental_value.mli  jbuild  mapping.ml  mapping.mli  process.ml  process.mli  reducer.ml  series.ml  store.ml  top.ml  unbounded.ml  util.ml
lib/util/: jbuild
test/: dune  jbuild  test_interpreter.ml  test_series.ml  tests.ml
