opam-version: "1.2"                                                                                                                                                                                        
authors: ["Didier Wenzek <didier.wenzek@acidalie.com>"]
license: "GPL"
build: [
  ["jbuilder" "build" "-p" name "." "-j" jobs "@install"]
]
build-test: [
  ["jbuilder" "runtest" "-p" name "-j" jobs]
]
depends: [
  "jbuilder" {build}
]   
