opam-version: "1.2"                                                                                                                                                                                        
version: "0.1.0"
license: "MIT"
build: [
  ["jbuilder" "build" "-j" jobs "@install"]
]
build-test: [
  ["jbuilder" "runtest" "-j" jobs]
]
depends: [
  "datamint"
  "str"
  "jbuilder" {build}
  "oUnit"  {test}
]   
